@@ -9,16 +9,19 @@ import static org.assertj.core.api.Assertions.assertThat;
 
 class ListCriteriaTest {
     
+    private static final String FIELD_USERNAME = "username";
+    private static final String FIELD_CREATE_TIME = "createTime";
+    
     @Test
-    void empty_returnsEmptyFiltersAndSort() {
+    void emptyReturnsEmptyFiltersAndSort() {
         ListCriteria c = ListCriteria.empty();
         assertThat(c.getFilters()).isEmpty();
         assertThat(c.getSortOrders()).isEmpty();
     }
     
     @Test
-    void from_nullRequest_returnsEmpty() {
-        EntityMeta meta = metaWithFields("username", "status");
+    void fromNullRequestReturnsEmpty() {
+        EntityMeta meta = metaWithFields(FIELD_USERNAME, "status");
         ListCriteria c = ListCriteria.from(null, meta);
         assertThat(c.getFilters()).isEmpty();
         assertThat(c.getSortOrders()).isEmpty();
@@ -36,31 +39,31 @@ class ListCriteriaTest {
     }
     
     @Test
-    void from_emptyFilters_validSort() {
-        EntityMeta meta = metaWithFields("username", "createTime");
-        SearchRequest req = new SearchRequest(List.of(), List.of(new SortOrder("createTime", "desc")), 0, 20);
+    void fromEmptyFiltersValidSort() {
+        EntityMeta meta = metaWithFields(FIELD_USERNAME, FIELD_CREATE_TIME);
+        SearchRequest req = new SearchRequest(List.of(), List.of(new SortOrder(FIELD_CREATE_TIME, "desc")), 0, 20);
         ListCriteria c = ListCriteria.from(req, meta);
         assertThat(c.getFilters()).isEmpty();
         assertThat(c.getSortOrders()).hasSize(1);
-        assertThat(c.getSortOrders().get(0).field()).isEqualTo("createTime");
-        assertThat(c.getSortOrders().get(0).dir()).isEqualTo("desc");
+        assertThat(c.getSortOrders().getFirst().field()).isEqualTo(FIELD_CREATE_TIME);
+        assertThat(c.getSortOrders().getFirst().dir()).isEqualTo("desc");
     }
     
     @Test
-    void from_filtersOnlyAllowedFields() {
-        EntityMeta meta = metaWithFields("username", "status");
-        SearchRequest req = new SearchRequest(List.of(new FilterCondition("username", Op.LIKE, "john"),
+    void fromFiltersOnlyAllowedFields() {
+        EntityMeta meta = metaWithFields(FIELD_USERNAME, "status");
+        SearchRequest req = new SearchRequest(List.of(new FilterCondition(FIELD_USERNAME, Op.LIKE, "john"),
                                                       new FilterCondition("unknown", Op.EQ, "x")
         ), List.of(), 0, 20
         );
         ListCriteria c = ListCriteria.from(req, meta);
         assertThat(c.getFilters()).hasSize(1);
-        assertThat(c.getFilters().get(0).field()).isEqualTo("username");
+        assertThat(c.getFilters().get(0).field()).isEqualTo(FIELD_USERNAME);
         assertThat(c.getFilters().get(0).op()).isEqualTo(Op.LIKE);
     }
     
     @Test
-    void from_nullEntityMeta_returnsEmpty() {
+    void fromNullEntityMetaReturnsEmpty() {
         SearchRequest req = new SearchRequest(List.of(new FilterCondition("a", Op.EQ, "b")), List.of(), 0, 20);
         ListCriteria c = ListCriteria.from(req, null);
         assertThat(c.getFilters()).isEmpty();
